small screen pagination and add previous and next button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
   </head>
   <body>
     <div class="container">
-       <h1>Image Pagination</h1> 
+      <h1>Image Pagination</h1>
       <div class="content"></div>
-      <div class="btn-container"></div>
+      <button class="small-screen-btn">Show more</button>
+      <div class="button-flex">
+        <button class="previous-btn">Previous</button>
+        <div class="btn-container"></div>
+        <button class="next-btn">Next</button>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
