solve next button bug. stop  button click when user is on last page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Image Pagination</h1>
+      <h1>Pagination</h1>
       <div class="content"></div>
       <button class="small-screen-btn">Show more</button>
       <div class="button-flex">
